--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ reqwest = { version = "0.12.19", default-features = false, features = ["rustls-t
 futures = "0.3.31"
 tokio = { version = "1.45.1", features = ["full"] }
 axum = { version = "0.8.4" }
+uuid = { version = "1.17.0", features = ["v4"] }
+chrono = { version = "0.4.41", features = ["clock"] }
 
 [profile.release]
 opt-level = 3
